# claude-pa

./: .gitignore  .mcp.json  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  config.example.sh  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.md  feature.md  preset-submission.md
.github/workflows/: ci.yml
commands/: morning.md  peek.md  spawn.md  status.md  wrap.md
hooks/: hooks.json
hooks/scripts/: load-vault-context.py  mark-main-pane.sh  pa-state-update.py
lib/: _backend_detect.sh  paths.sh  wizard.sh
lib/pa/: __init__.py  aggregate_todos.py  dashboard_render.py  extract_reply.py  mcp_server.py  paths.py  poll_pane_idle.py  preset_loader.py  state_update.py  vault_context.py
lib/terminal/: _interface.sh  iterm2-helper.py  iterm2.sh  iterm2_helper.py  kitty.sh  tmux.sh  wezterm.sh
lib/window-raise/: _interface.sh  linux.sh  macos.sh
presets/: LICENSE  README.md
presets/default/: .config-only  config.env
presets/obsidian-ce/: README.md  SKILL.md  config.env  daily-template.md
scripts/: migrate-from-claude-pa-internal.sh  rollback-migration.sh  smoke-test.sh
skills/personal-assistant/: SKILL.md
tests/bats/: README.md  pa-doctor.bats  pa-init.bats  pa-shell-init.bats  terminal-tmux.bats
tests/ci/: check-no-deprecated-symbols.sh  validate-manifest.py  validate-preset.sh
tests/pytest/: conftest.py  test_aggregate_todos.py  test_forbidden_constants_shared.py  test_mcp_server.py  test_paths.py  test_preset_loader.py  (+2 more)
